--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
     "react-svg": "^14.0.13",
     "slick-carousel": "^1.8.1",
